# 8-bit-CPU

./: .gitignore  8-bit-CPU.code-workspace  BrainDump.md  LICENSE  README.md
.github/workflows/: python-app.yml
arduino/arch_explore/: README.md  arch_explore.ino  make_asm.sh  math_ops.S  math_ops.ctmpl  math_ops.h
arduino/bouncyy/: Makefile  README.md  main.c
arduino/eeprom_burner/: .gitignore  (+27 more)
bios/: Makefile  bios.asm  bios.def  convert.asm  uart.asm
demo/: Makefile  add18.asm  aliases.def  banks.def  bios.def  double_dabble.asm  fibo.asm  fibo.c  fibo32.asm  hello.asm  hello_lcd.asm  instructions.def  ports.def  prime_sieve.asm  primes.txt  print.asm  squares.asm  squares2.asm  start_emu.sh  uart.asm  uart_output.asm  uart_output.txt  velkocpu.def
doc/: ALU Block.drawio  BrainDump.md  Design.md  Parts.md
include/: aliases.def  banks.def  bios.def  control_roms.sha256  cword.vinc  instructions.def  instructions.yaml  microcode.c  microcode.h  op-defs.h  pins.yaml  ports.def  velkocpu.def
parts/: Custom.dcm  Custom.lib
pycontrol/: client_cpu.py  client_pins.py  demo_fibo.py  demo_off.py  emu_check.sh  localpath.conf  microcode.py  mypy.ini  mypy_check.sh  pyassemble.py  pylintrc  pyproject.toml  tests_alu.py  tests_ram.py
pycontrol/localpath-0.1/: .gitignore  pyproject.toml
pycontrol/localpath-0.1/debian/: changelog  control  copyright  rules
simulation/: mem-control.circ  overflow.circ  q-clock-v2.dig  q-clock.circ  reg-alu.circ  ud-counter.dig  zero.circ
tools/: build_all.sh  exec_bin.py  localpath.conf  start_emu.sh  stop_emu.sh  test_all.sh
(+531 files in other folders)
