[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Localpath"
version = "0.1"
description = "Add local packages to path"
license = ""
authors = [
    { name = "Jurģis Brigmanis", email = "velko.x@gmail.com" },
]

[tool.hatch.build.targets.wheel]
    packages = ["src/localpath"]
